demoapp/release-02/kiali-vs.yaml
---
# Thanks: https://github.com/sixeyed/istio-samples/blob/master/visualization-kiali/01_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15029
        name: http-kiali
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - kiali-gateway
  http:
    - match:
        - port: 15029
      route:
        - destination:
            host: kiali
            port:
              number: 20001
